--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     "authors": [
         {
             "name": "Antonio Carlos Ribeiro",
-            "email": ":acr@antoniocarlosribeiro.com",
+            "email": "acr@antoniocarlosribeiro.com",
             "role": "Developer"
         }
     ],
